--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>Happy Birthday!!! :)</title>
+  <title>🌈 Happy Birthday!!! 💕🎂</title>
 
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
 
@@ -36,7 +36,7 @@
 
       <h1 class="one">Hey
 
-        <span id="name">Saumiya...</span>
+        <span id="name">Khanjna...</span>
 
       </h1>
 
@@ -54,7 +54,7 @@
 
       <div class="text-box">
 
-        <p class="hbd-chatbox">Happy birthday to you!! Yeee! Many many happy returns of your day</p>
+        <p class="hbd-chatbox">Happy birthday to you Love!! Yeee! Many happy returns of your day</p>
 
         <p class="fake-btn">Send</p>
 
@@ -92,6 +92,8 @@
 
     <div class="six">
 
+      <img src="img/demo.jpg" alt="" class="lydia-dp" id="imagePath">
+      <img src="img/demo.jpg" alt="" class="lydia-dp" id="imagePath">
       <img src="img/demo.jpg" alt="" class="lydia-dp" id="imagePath">
 
       <!--  <img src="img/hat.svg" alt="" class="hat">  -->
@@ -240,9 +242,9 @@
 
     <div class="nine">
 
-      <p>Hope you enjoy this:)</p>
+      <p>Hope you have enjoyed this:)</p>
 
-      <p id="replay">Or click, if you want to watch it again.</p>
+      <p id="replay">Or click, to watch it again untill you like it.</p>
 
       <p class="last-smile">:)</p>
 
