--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 
     <div class="six">
 
-      <img src="img/demo.jpg" alt="" class="lydia-dp" id="imagePath">
-      <img src="img/demo.jpg" alt="" class="lydia-dp" id="imagePath">
-      <img src="img/demo.jpg" alt="" class="lydia-dp" id="imagePath">
+      <img src="img/i1.jpg" alt="" class="lydia-dp" id="imagePath">
+      <img src="img/i4.jpg" alt="" class="lydia-dp" id="imagePath">
+      <img src="img/i3.jpg" alt="" class="lydia-dp" id="imagePath">
 
       <!--  <img src="img/hat.svg" alt="" class="hat">  -->
 
