second last final touch

--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
 
       <h1 class="one">Hey
 
-        <span id="name">Khanjna...</span>
+        <span id="name">Khanjna💕</span>
 
       </h1>
 
-      <p class="two" id="greetingText">It's very special day for all btw!</p>
+      <p class="two" id="greetingText">This is only for you🫰 and lets hope you like This Love😊</p>
 
     </div>
 
     <div class="three">
 
-      <p>It's your birthday!!!</p>
+      <p>It's your birthday!!! Yeeeeeyyy🌈🎂</p>
 
     </div>
 
@@ -54,7 +54,7 @@
 
       <div class="text-box">
 
-        <p class="hbd-chatbox">Happy birthday to you Love!! Yeee! Many happy returns of your day</p>
+        <p class="hbd-chatbox">Happy birthday to you Love!! Yeee!Many many returns of your day</p>
 
         <p class="fake-btn">Send</p>
 
@@ -92,7 +92,7 @@
 
     <div class="six">
 
-      <img src="img/i1.jpg" alt="" class="lydia-dp" id="imagePath">
+      <img src="img/i2.jpg" alt="" class="lydia-dp" id="imagePath">
       <img src="img/i4.jpg" alt="" class="lydia-dp" id="imagePath">
       <img src="img/i3.jpg" alt="" class="lydia-dp" id="imagePath">
 
@@ -102,7 +102,11 @@
 
         <h3 class="wish-hbd">Happy Birthday!</h3>
 
-        <h5 id="wishText">May the happiness and success always be with you! :)</h5>
+        <h5 id="wishText">Happy Birthday, my love! 🎉🎂 
+          Your presence fills my life with joy and happiness. 
+          May this day be as special and beautiful as you are. 
+          Here's to celebrating you and the amazing moments we've shared! 
+          🥳🎁💖 #HappyBirthday #CelebratingYou</h5>
 
       </div>
 
