adding responsive and icon

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
 
-  <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+  <link rel="shortcut icon" type="image/png" href="img/icon.png" />
 
   <link rel="stylesheet" href="style.css">
 
@@ -92,9 +92,13 @@
 
     <div class="six">
 
-      <img src="img/i2.jpg" alt="" class="lydia-dp" id="imagePath">
-      <img src="img/i4.jpg" alt="" class="lydia-dp" id="imagePath">
-      <img src="img/i3.jpg" alt="" class="lydia-dp" id="imagePath">
+      <center>
+
+        <img id="img1" src="img/i2.jpg" alt="" class="lydia-dp" id="imagePath">
+        <img id="img2" src="img/i4.jpg" alt="" class="lydia-dp" id="imagePath">
+        <img id="img3" src="img/i3.jpg" alt="" class="lydia-dp" id="imagePath">
+
+      </center>
 
       <!--  <img src="img/hat.svg" alt="" class="hat">  -->
 
